    (most importantly some mp3s)
  - id3: remove the "id3v1_encoding" setting; by definition, all ID3v1 tags
    are ISO-Latin-1
* decoder
  - ffmpeg: support ReplayGain and MixRamp
  - ffmpeg: support stream tags
  - mad: reduce memory usage while scanning tags
  - mpcdec: read the bit rate
* playlist
  - cue: don't skip pregap
  - embcue: fix last track
* output
  - jack: reduce CPU usage
  - pulse: set channel map to WAVE-EX
  - recorder: record tags
  - recorder: allow dynamic file names
* mixer
  - null: new plugin
* resampler
  - new block "resampler" in configuration file
    replacing the old "samplerate_converter" setting
  - soxr: allow multi-threaded resampling
* reset song priority on playback
* write database and state file atomically
* always write UTF-8 to the log file.
* remove dependency on GLib
* support libsystemd (instead of the older libsystemd-daemon)
* database
  - proxy: add TCP keepalive option
* update
  - apply .mpdignore matches to subdirectories

ver 0.19.10 (2015/06/21)
* input
  - curl: fix deadlock on small responses
  - smbclient: fix DFF playback
* decoder
  - ffmpeg: improve seeking accuracy
  - fix stuck stream tags
* encoder
  - opus: fix bogus granulepos
* output
  - fix failure to open device right after booting
* neighbor
  - nfs: fix deadlock when connecting
* fix "single" mode breakage due to queue edits

ver 0.19.9 (2015/02/06)
* decoder
  - dsdiff, dsf: raise ID3 tag limit to 1 MB
* playlist: fix loading duplicate tag types from state file
* despotify: remove defunct plugin
* fix clock integer overflow on OS X
* fix gcc 5.0 warnings
* fix build failure with uClibc
* fix build failure on non-POSIX operating systems
* fix dependency issue on parallel Android build
* fix database/state file saving on Windows

ver 0.19.8 (2015/01/14)
* input
  - curl: fix bug after rewinding from end-of-file
  - mms: reduce delay at the beginning of playback
* decoder
  - dsdiff, dsf: allow ID3 tags larger than 4 kB